chore: Improve interactive table